--- a/application/modules/backend/views/scripts/index/index.phtml
+++ b/application/modules/backend/views/scripts/index/index.phtml
@@ -194,6 +194,7 @@ $jsonTree = json_encode($this->categories);
 
 <script type="application/javascript">
   var catTree = <?= $jsonTree ?>;  
+  var backendView = true;
 </script>
 <script type="application/javascript" src="/theme/react/cat-tree.js"></script>
 
