--- a/application/modules/default/views/scripts/authorization/partials/loginForm.phtml
+++ b/application/modules/default/views/scripts/authorization/partials/loginForm.phtml
@@ -34,6 +34,11 @@
       margin-top: 8px;
       width: 100%;
     }
+
+    main#reg-page section#register-wrap #register #register-box {
+      width: 100%;
+    }
+
     main#reg-page section#register-wrap #register #social-register {
       float: right;
       width: 100%;
