--- a/application/modules/default/views/scripts/authorization/partials/registerForm.phtml
+++ b/application/modules/default/views/scripts/authorization/partials/registerForm.phtml
@@ -47,6 +47,20 @@
   main#reg-page section#register-wrap #register #register-box #register-form-box .form-group {
     margin-bottom: 5px;
   }
+
+  main#reg-page section#register-wrap button#login {
+    margin-top: 8px;
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  main#reg-page section#register-wrap #register #social-register {
+    float: right;
+    padding: 0;
+    width: 100%;
+  }
+  main#reg-page section#register-wrap #register #social-register #social-login-elements {
+    margin-bottom: 0;
+  }
 }
 </style>
 
