--- a/application/modules/backend/views/scripts/index/index.phtml
+++ b/application/modules/backend/views/scripts/index/index.phtml
@@ -26,55 +26,10 @@ $jsonTree = json_encode($this->categories);
 ?>
 <?= $this->partial('yui.phtml'); ?>
 
-<style type="text/css">
-    table.tablestati {
-        display: block;
-        background-color: #ccc;
-        margin-top: 40px;
-        float: left;
-        margin-left: 20px;
-    }
-
-    table.tablestati thead td {
-        font-weight: bold;
-        background-color: #fff;
-    }
-
-    table.tablestati td {
-        padding: 1px;
-        margin: 1px;
-    }
-
-    table.tablestati td.number {
-        text-align: right;
-        width: 80px;
-        padding-right: 10px;
-    }
-
-    path {
-        stroke: steelblue;
-        stroke-width: 2;
-       /* fill: none;  */
-    }
-
-    .axis path,
-    .axis line {
-       /*  fill: none;*/
-        stroke: grey;
-        stroke-width: 1;
-        shape-rendering: crispEdges;
-    }
-
-    .legend {
-        font-size: 16px;
-        font-weight: bold;
-        text-anchor: middle;
-    }
-</style>
-
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script src="/theme/flatui/js/lib/d3pie.min.js"></script>
+<script src="/theme/flatui/js/lib/multiline.js"></script>
 
  <script type="text/javascript" src="/theme/react/lib/react/react.js"></script>
 <script type="text/javascript" src="/theme/react/lib/react-dom/react-dom.js"></script>
@@ -106,6 +61,7 @@ $jsonTree = json_encode($this->categories);
             <div style="width: 100%; padding: 20px">
 
                 <div id='d3linelableinline'></div>
+
 
             </div>
         </div>
@@ -180,10 +136,8 @@ $jsonTree = json_encode($this->categories);
           <div id="payoutCategoryTab" class="tab-pane">
                 <div id="category-tree-container">
                 </div>
-            <div id="pieCategory" style="padding:50px; ">
+            <div id="payoutCategoryLineChart" class="chart-wrapper" style="width: 800px; height: 1000px; display: block; float: right">
                     
-
-
             </div>
         </div>
 
@@ -348,7 +302,7 @@ $jsonTree = json_encode($this->categories);
     $(".payoutCategoryTab").click(function () {
         $.getScript("/theme/flatui/js/stati/payoutCategory.js");
     });
-    
+
 
     $('#payoutNewcomerTab').prepend(createMonthFilter('selectmonthNewcomer'));
     $('#selectmonthNewcomer').change(function () {
@@ -408,4 +362,41 @@ $jsonTree = json_encode($this->categories);
             $('#payoutMonthDiffTabContainer').html(table);
         });
     });
+</script>
+
+
+<script type="text/javascript">
+    var parseTime = d3.timeParse("%Y%m");
+    $(document).ready(function () { 
+        $('body').on('click', '#category-tree a', function (event) {
+            event.preventDefault();
+            event.stopPropagation();            
+            var start = this.href.indexOf("cat");
+            if(start<0) return;
+            var catid = this.href.substring(start+4);
+            var title = $(this).find('span.title').text();
+            
+            $("#payoutCategoryLineChart").empty();             
+                d3.json("/backend/index/getpayoutcategory?catid="+catid, function(error, data) {        
+                if (error) throw error;
+                data = data.results;   
+                if(!data){
+                     $("#payoutCategoryLineChart").text('no data found!');
+                    return;
+                }
+                data.forEach(function (d) {                   
+                   d.year = parseTime(d.yearmonth);
+                   d.variableA = +d.amount;                   
+               });
+                var chart = makeLineChart(data, 'year', {
+                    'Payout': {column: 'variableA'},                  
+                }, {xAxis: 'Month', yAxis: 'Amount'});
+                chart.bind("#payoutCategoryLineChart");
+                chart.render();
+
+            });
+            
+        });         
+    });
+
 </script>
