--- a/httpdocs/theme/backend/css/backend/stati.css
+++ b/httpdocs/theme/backend/css/backend/stati.css
@@ -130,3 +130,170 @@ text {
 .label-key {
   font-weight: bold;
 }
+
+
+
+table.tablestati {
+    display: block;
+    background-color: #ccc;
+    margin-top: 40px;
+    float: left;
+    margin-left: 20px;
+}
+
+table.tablestati thead td {
+    font-weight: bold;
+    background-color: #fff;
+}
+
+table.tablestati td {
+    padding: 1px;
+    margin: 1px;
+}
+
+table.tablestati td.number {
+    text-align: right;
+    width: 80px;
+    padding-right: 10px;
+}
+
+path {
+    stroke: steelblue;
+    stroke-width: 2;
+   /* fill: none;  */
+}
+
+.axis path,
+.axis line {
+   /*  fill: none;*/
+    stroke: grey;
+    stroke-width: 1;
+    shape-rendering: crispEdges;
+}
+
+.legend {
+    font-size: 16px;
+    font-weight: bold;
+    text-anchor: middle;
+}
+#category-tree-container{
+  max-height: 750px;
+
+  overflow-y: auto;
+}
+#category-tree-container .product-counter{
+    padding-left: 20px;
+    color:#1879B6;
+    font-size: smaller;
+}
+#category-tree-container  ul{
+    
+}
+
+/*multiline.css*/
+.chart-wrapper {
+    max-width: 950px;
+    min-width: 304px;
+    margin: 0 auto;
+    background-color: #FAF7F7;
+}
+
+.chart-wrapper .inner-wrapper {
+    position: relative;
+    padding-bottom: 50%;
+    width: 100%;
+}
+
+.chart-wrapper .outer-box {
+    position: absolute;
+    top: 0; bottom: 0; left: 0; right: 0;
+}
+
+.chart-wrapper .inner-box {
+    width: 100%;
+    height: 100%;
+}
+
+.chart-wrapper text {
+  font-family: sans-serif;
+  font-size: 11px;
+}
+
+.chart-wrapper p {
+    font-size: 16px;
+    margin-top:5px;
+    margin-bottom: 40px;
+}
+
+.chart-wrapper .axis path,
+.chart-wrapper .axis line {
+    fill: none;
+    stroke: #1F1F2E;
+    stroke-opacity: 0.7;
+    shape-rendering: crispEdges;
+
+}
+.chart-wrapper .axis path {
+  stroke-width: 2px;
+}
+
+.chart-wrapper .line {
+  fill: none;
+  stroke: steelblue;
+  stroke-width: 5px;
+}
+
+.chart-wrapper .legend  {
+    min-width: 200px;
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    font-size: 16px;
+    padding: 10px 40px;
+}
+.chart-wrapper .legend > div {
+    margin: 0px 25px 10px 0px;
+    flex-grow: 0;
+}
+.chart-wrapper .legend p {
+    display:inline;
+    font-size: 0.8em;
+    font-family: sans-serif;
+    font-weight: 600;
+}
+.chart-wrapper .legend .series-marker {
+    height: 1em;
+    width: 1em;
+    border-radius: 35%;
+    background-color: crimson;
+    display: inline-block;
+    margin-right: 4px;
+    margin-bottom: -0.16rem;
+}
+
+.chart-wrapper .overlay {
+  fill: none;
+  pointer-events: all;
+}
+
+.chart-wrapper .focus circle {
+  fill: crimson;
+  stroke: crimson;
+  stroke-width: 2px;
+  fill-opacity: 15%;
+}
+.chart-wrapper .focus rect {
+    fill: lightblue;
+    opacity: 0.4;
+    border-radius: 2px;
+}
+.chart-wrapper .focus.line {
+    stroke: steelblue;
+    stroke-dasharray: 2,5;
+    stroke-width: 2;
+    opacity: 0.5;
+}
+@media (max-width:500px){
+    .chart-wrapper .line {stroke-width: 3px;}
+    .chart-wrapper .legend {font-size: 14px;}
+}
