--- a/application/modules/default/views/scripts/explore/partials/filter.phtml
+++ b/application/modules/default/views/scripts/explore/partials/filter.phtml
@@ -23,12 +23,13 @@
 $modelCategory = new Default_Model_ProjectCategory();
 //$this->categories = $modelCategory->fetchCategoryTreeCurrentStore();
 $this->categories = $modelCategory->fetchTreeForView();
-
+$jsonTree = json_encode($this->categories);
 $this->navBackgroundColorActive = $this->template['header-nav-tabs']['background-color-active'];
 $this->navBackgroundColor = $this->template['header-nav-tabs']['background-color'];
 $this->navColorActive = $this->template['header-nav-tabs']['link']['color'];
-?><style type="text/css">
-   
+?>
+<style type="text/css">
+
     .naviblock {
         list-style-type: none;
         margin: 0;
@@ -38,7 +39,7 @@ $this->navColorActive = $this->template['header-nav-tabs']['link']['color'];
         font-size: 12px;
         border: none;
         width: 100%;
-        color: #2673b0;        
+        color: #2673b0;
     }
     .navilink {
         color: #2673b0;
@@ -59,20 +60,26 @@ $this->navColorActive = $this->template['header-nav-tabs']['link']['color'];
           display: block;
             width:100%;
     }
+
     li.navilink.parentactive.parent a
     {
         color:  <?=$this->navBackgroundColorActive?>;
     }
+
     ul.naviblock a.active.child
     {
         background-color:  <?=$this->navBackgroundColorActive?>;
         color:  <?=$this->navColorActive?>;
     }
-    li.navilink.active.parent a.active.parent{
 
-        background-color:  <?=$this->navBackgroundColorActive?>;
-        color:  <?=$this->navColorActive?>;
+    li.navilink.active.parent a.active.parent,
+    #category-tree-container #category-tree ul li.active > a,
+    #category-tree-container #category-tree ul li a:hover
+    {
+        background-color:  <?=$this->navBackgroundColorActive?> !important;
+        color:  <?=$this->navColorActive?> !important;
     }
+
     li.navilink span.cat-title {
         display: inline-block;
         white-space: nowrap;
@@ -90,17 +97,19 @@ $this->navColorActive = $this->template['header-nav-tabs']['link']['color'];
     }
 
     /*
-    li.navilink.active.parent a.child{       
+    li.navilink.active.parent a.child{
         color:  <?=$this->navBackgroundColorActive?>;
     }
    */
-</style> 
-<div class="panel-group" id="accordion">
+
+</style>
+
+<?php /* <div class="panel-group old-cat-tree-container" id="accordion">
     <div class="panel panel-default accordion-group">
             <div style="margin-left: -10px">
             <?php
             function build_tree($rows, $selectedOrder, $addAllItem = false)
-            {                
+            {
                 if(!is_array($rows))
                 {
                     $rows = array($rows);
@@ -141,7 +150,7 @@ $this->navColorActive = $this->template['header-nav-tabs']['link']['color'];
             /**
              * @param string $selectedOrder
              * @return string
-             */
+             *
             function addRoot($selectedOrder)
             {
                 $helpExploreUrl = new Default_View_Helper_BuildExploreUrl();
@@ -149,14 +158,16 @@ $this->navColorActive = $this->template['header-nav-tabs']['link']['color'];
                 return "<li class='navilink parent'><span class='title'><a class='parent' href='{$urlExplore}' data-id='0'><span class='cat-title'>All</span></a></span></li>";
             }
 
+
             $selectedOrder = isset($this->filters['order']) ? $this->filters['order'] : null;
             echo build_tree($this->categories, $selectedOrder, true);
             ?>
             </div>
     </div>
 </div>
+*/ ?>
 <script type="application/javascript">
-    $(document).ready(function(){
+    /*$(document).ready(function(){
         var hierarchy = (function () {
             return {
                 setup: function (cat_id) {
@@ -167,5 +178,18 @@ $this->navColorActive = $this->template['header-nav-tabs']['link']['color'];
         })();
 
         hierarchy.setup(<?=$this->cat_id?>);
-    });
+    });*/
 </script>
+<link rel="stylesheet" href="/theme/react/assets/css/cat-tree.css"/>
+<div id="category-tree-container">
+</div>
+<script type="application/javascript">
+  var catTree = <?= $jsonTree ?>;
+  <?php
+    $catIdExists = isset($this->cat_id);
+    if ($catIdExists){
+      echo "var categoryId = ". $this->cat_id .";";
+    }
+  ?>
+</script>
+<script type="application/javascript" src="/theme/react/cat-tree.js"></script>
