--- a/application/modules/default/views/scripts/authorization/partials/registerForm.phtml
+++ b/application/modules/default/views/scripts/authorization/partials/registerForm.phtml
@@ -1,4 +1,4 @@
-<?php 
+<?php
 /**
  *  ocs-webserver
  *
@@ -20,6 +20,47 @@
  *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  **/
 ?>
+
+<style>
+@media (max-width:767px) {
+  main#reg-page section#register-wrap {
+    position: absolute;
+    top: 140px;
+    left: 5%;
+    margin-left: 0;
+    width: 90%;
+  }
+  main#reg-page section#register-wrap #register #register-box {
+    width: 100%;
+  }
+  main#reg-page section#register-wrap #register #register-box #register-form-box {
+    width: 100%;
+  }
+  main#reg-page section#register-wrap #register #register-box #register-form-box ul.errors {
+    text-align: left;
+    margin: 0;
+    padding-left: 20px;
+    font-size: 12px;
+  }
+  main#reg-page section#register-wrap #register #register-box #register-form-box .form-group {
+    margin-bottom: 5px;
+  }
+  main#reg-page section#register-wrap button#login {
+    margin-top: 8px;
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  main#reg-page section#register-wrap #register #social-register {
+    float: right;
+    padding: 0;
+    width: 100%;
+  }
+  main#reg-page section#register-wrap #register #social-register #social-login-elements {
+    margin-bottom: 0;
+  }
+}
+</style>
+
 <div id="register-form-box" class="well">
     <h3><?= $this->translate('Join the community') ?></h3>
 
