--- a/application/modules/default/views/scripts/authorization/partials/registerForm.phtml
+++ b/application/modules/default/views/scripts/authorization/partials/registerForm.phtml
@@ -30,6 +30,11 @@
     margin-left: 0;
     width: 90%;
   }
+
+  main#reg-page section#register-wrap #register h3 {
+    margin: 0 0 30px 0;
+  }
+
   main#reg-page section#register-wrap #register #register-box {
     width: 100%;
   }
