--- a/application/modules/default/views/scripts/explore/partials/filter.phtml
+++ b/application/modules/default/views/scripts/explore/partials/filter.phtml
@@ -192,4 +192,4 @@ $this->navColorActive = $this->template['header-nav-tabs']['link']['color'];
     }
   ?>
 </script>
-<script type="application/javascript" src="/theme/react/cat-tree.js"></script>
+<script type="application/javascript" src="/theme/react/cat-tree.js?<?= APPLICATION_VERSION ?>"></script>
